[package]
name = "focusmini"
version = "1.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/SzilvasiPeter/focusmini"
readme = "README.md"
keywords = ["pomodoro", "timer", "cli", "productivity"]
categories = ["command-line-utilities", "date-and-time"]
description = "Simple Pomodoro timer with audio cues"

[dependencies]

[features]
fast-tick = []
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
