[package]
name = "focusmini"
version = "1.2.4"
edition = "2024"
license = "MIT"
description = "Simple Pomodoro timer with audio cues"
readme = "README.md"
repository = "https://github.com/SzilvasiPeter/focusmini"
keywords = ["pomodoro", "timer", "cli", "productivity", "zero-dependency"]
categories = ["command-line-utilities", "date-and-time"]

[dev-dependencies]
serial_test = "2"
tempfile = "3"

[features]
fast-tick = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
