[package]
name = "focusmini"
version = "2.0.0"
edition = "2024"
license = "MIT"
description = "Simple Pomodoro timer with audio cues"
readme = "README.md"
repository = "https://github.com/SzilvasiPeter/focusmini"
keywords = ["pomodoro", "timer", "cli", "productivity", "zero-dependency"]
categories = ["command-line-utilities", "date-and-time"]

[features]
fast-tick = []

[lints.rust]
unsafe_code = "deny"
unused_results = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
